--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
   "license": "GPL-3.0",
   "authors": [
     {
-      "name": "Muhammad Adnan",
-      "email": "naravaya04@gmail.com"
+      "name": "Rootwritter",
+      "email": "dustwork.id@gmail.com"
     }
   ],
   "autoload": {
